# constraint-theory-python

./: CHANGELOG.md  CHARTER.md  CONTRIBUTING.md  Cargo.toml  DOCKSIDE-EXAM.md  LICENSE  ONBOARDING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml  release.yml
constraint_theory/: __init__.py  financial.py  hidden_dims.py  manifold.py  ml.py  quantizer.py
docs/: API.md  ECOSYSTEM.md  INTEGRATION.md  JUPYTER_INTEGRATION.md  MIGRATION.md  PRODUCTION.md  QUICK_REFERENCE.md  RELEASE.md  RESEARCH.md  RUST_FFI.md  USE_CASES.md  VERSION_MANAGEMENT.md
docs/research/: RESEARCH_3D_QUANTIZATION_INTEGRATION.md  UNIFIED_QUANTIZATION_SYSTEM.md
examples/: advanced_numpy_integration.py  basic_usage.py  batch_processing.py  data_export.py  game_dev.py  ml_training.py  numpy_integration.py  quantization_demo.py  quickstart.py  robotics.py  scientific.py  visualization.py
src/: lib.rs
src/constraint_theory_python/: __init__.py  cohomology.py  curvature.py  errors.py  hidden_dimensions.py  holonomy.py  kdtree.py  manifold.py  percolation.py  quantizer.py
tests/: test_advanced.py  test_batch.py  test_bindings.py  test_compatibility.py  test_hidden_dimensions.py  test_hidden_dims.py  test_manifold.py  test_ml_integration.py  test_quantizer.py
