[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-theory-python"
version = "0.1.0"
description = "Python implementation of Constraint Theory — exact constraint satisfaction via Pythagorean geometry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SuperInstance Team" },
]
keywords = [
    "geometry",
    "constraint-satisfaction",
    "pythagorean",
    "kdtree",
    "exact-arithmetic",
    "deterministic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/constraint-theory-python"
Repository = "https://github.com/SuperInstance/constraint-theory-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
